--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 <body>
     <div class="container">
         <div class="left-column">
-            <img src="https://lh3.googleusercontent.com/pw/AP1GczMJ3kPBzmM7dmSyZlIF3hHUrv21kvTNWtfp3YNZasRqsvqNJ7GGkFl2qfIi6hbxBnhVGk2CViMRgYWncmYFj9vlP5FYKXug4P65i1tf22cI9RXfo2Z-OidP6a17Bum4xQ4ApQgB1OdmR02u3huA2qQEqg_x7IlAVzzTz36LyQVkm9VRHMxD0OuCUZcufOoaM4iejhuksmFrHfvl734z2oNmUrXAkDrcJGdxCtOpXfbTgHpgD2Q6UmZ2Hh1wOFwAStQjiUT30c3CiNvTIrDSc8j5OvI-Wvcsisll47mj-PLobeiWjRLX_3xbR1vkeM53DIhCEr5BfC3OAN0g959RzTJy7RDjJ90wf4gIvVzMKAPqbhvsQ7u8N9wZbLSDOZ-vcmgQWrQRjF7jnHZ0-2o9Mgyv0lP8lix2TJDqZv5UoOMZKDRY4kIheQHhVWIqzsPJqwRCnaVqMttKD7uRWza3fHKCCYWWXvrH0mI27LSh_qjbeaYlo1NSMiiz6Q0YuYBlZXNoT2MOG1JLGDrrjFh9MibgxIgMc_0uClUMtIJcUarKXSZJ_Mak_hsYUXgVGGq8Y-R2S5EbN80ZW6qeRPV2BYd2b6ec2MlzLy8SlGx6b3US2-tQoC8Pkjdo2gevci_0VUGaVSuEbO0VtU041DDvN30w0700mmJ31sNr8O_5FlEEs_XcX7uut5MV3DXKkdkmgKwYnMrPNPilbHxcn_wV-yGgvi4HrJekzlQmcQYwXwtQYNurefA5o0ru9MKER9s5aAE8jlOFK9LaYjFNTUXNkVtqKRu8G_aoFe9jLNjLm1lxWizt6tgBwS5TCQALO6__-65Ru4e3rnrd2NVoLysucS1WTK2KBv6UFkNTuW61yLQwXWBLCAaWSTrlbppQ5mDcHoLsaBAo9cm8wKC0PXEt0WmyOLe7CDp6suOs_enikgmjHQT0JFckEsN8daQF5Yk=w436-h582-s-no?authuser=0" alt="Hesbon Angwenyi" class="profile-picture">
+            <img src="https://lh3.googleusercontent.com/pw/AP1GczNIrrxEzj45UCzfN2FSI4YQANO0fbJ8ISLvQv0FXkFjpcpvl-BQOuoNzNUOwn4C8W-HaO_kbjnBSmztcc9jGpCC2QCRxIB8Hn-C-adADCj0lsomDSqI1KLEZBMeLnvqzogvCup7DH2xz0McoCSt6DSI_cvaZHFFMzc_D4tMhEBflhitNmqUVRRsvoXRPZhokJIVF-JR8qw2TCy6VS9htqEnQjFjGNKhMYZ6kxB7UQSEmva-Z1Q3zwzX4lJHo-siorbhaHPZ2BlJal3Jd_AoLew7Ex9njnVikRCJJD3Sr0ZQVQ5qSMzPbSAYXvoImVEOkEZAbCSzP7d8uONpTWZ9r-ZusVGubgcLWeAAA6BuA4ZA6qdw2Vk1oeH3tOBDG5TxizZuKqD6iJzTu5TkFD3HCCzou2yjiwZg0Gu1EmS-geXRIBwn0v4N_Nb20-IH7Qg4mAshlBiFdg9yDaZMORnMz99LJiB0b6N8ExZuwSl_dWfSIsCf1kfOZYiQeMKEeqTg1OqVqRmJZPi5bvWxwbUOxUXVrGbm-Rdbf7mb5lVEFW0CCjQL1oLF8SKdrc3NbrgJ4i4h3BfiKLI0UMDlCvbZgiZCgShkDuyqdBAtnTG2dbEEnbtr994oufUBJCS1GinhgqaZ444Y8E_c1MMFqNgV_Wwgnax_YTZL_it2tM5TOm8RI11cjSTUBDjHsELIm04j9hPFJd4uGCvfa73nPlf0OJs05QGVFAhm8pjYe52m97sRyAGh1Iw5U17H2xOHqV4-cuwV-H8ntdMd_01ubW-fC9XF6R4tD-a5mYUQ3R_WKQqsECB1PaBBTi3XuQGalmjIx1zh8robpitk6CQqA13jgcLCAzKd4-P3mepU4UUZBPZpxgkl7WFGWkBkBqQAh4nELTGPg7Rj2w3onVmDC7pe3fjp_vsJ2gtmwQ9knqOfQGr5C5yJl9JgyjjfrC3-DsI=w255-h582-s-no?authuser=0=0" alt="Hesbon Angwenyi" class="profile-picture">
             <div class="contact-info">
                 <p>Email: <a href="mailto:hesbonmanyinsa96@gmail.com">hesbonmanyinsa96@gmail.com</a></p>
                 <p>Phone: <a href="tel:+254743573380">+254743573380</a></p>
@@ -153,31 +153,50 @@
                 <p>Enthusiastic and detail-oriented Full Stack Software Developer with a strong foundation in computer science principles and hands-on experience through academic projects and internships. Proficient in a wide range of modern web development technologies and tools, and eager to contribute to dynamic development teams. Demonstrates excellent problem-solving abilities and a passion for learning and implementing new technologies.</p>
                 <p>Solid understanding of both front-end and back-end development processes, including design, coding, testing, and deployment. Capable of working collaboratively in team environments and independently managing tasks. Dedicated to creating robust, scalable, and user-friendly applications.</p>
             </div>
+
             <div class="section">
                 <h2>TECHNICAL SKILLS</h2>
-                <h3>Front-End Technologies</h3>
-                <p>HTML5, CSS3, JavaScript</p>
-                <div class="skills-bar" style="width: 90%;" data-percentage="90"><span></span></div>
-                <p>React, Angular, Vue.js</p>
-                <div class="skills-bar" style="width: 80%;" data-percentage="80"><span></span></div>
-                <h3>Back-End Technologies</h3>
-                <p>Node.js, Express</p>
-                <div class="skills-bar" style="width: 85%;" data-percentage="85"><span></span></div>
-                <p>Java, Spring Boot</p>
-                <div class="skills-bar" style="width: 75%;" data-percentage="75"><span></span></div>
-                <p>Python, Django, Flask</p>
-                <div class="skills-bar" style="width: 70%;" data-percentage="70"><span></span></div>
-                <h3>Database Technologies</h3>
-                <p>SQL, MySQL, PostgreSQL</p>
-                <div class="skills-bar" style="width: 80%;" data-percentage="80"><span></span></div>
-                <p>NoSQL, MongoDB</p>
-                <div class="skills-bar" style="width: 75%;" data-percentage="75"><span></span></div>
-                <h3>Version Control</h3>
-                <p>Git, GitHub</p>
-                <div class="skills-bar" style="width: 85%;" data-percentage="85"><span></span></div>
-                <h3>Tools</h3>
-                <p>VS Code, Docker, Jenkins</p>
-                <div class="skills-bar" style="width: 85%;" data-percentage="85"><span></span></div>
+                <div>
+                    <h3>Front-End Technologies</h3>
+                    <p>HTML5, CSS3, JavaScript</p>
+                    <div class="skills-bar" style="width: 90%;" data-percentage="90"><span></span></div>
+                </div>
+                <div>
+                    <p>React, Angular, Vue.js</p>
+                    <div class="skills-bar" style="width: 80%;" data-percentage="80"><span></span></div>
+                </div>
+                <div>
+                    <h3>Back-End Technologies</h3>
+                    <p>Node.js, Express</p>
+                    <div class="skills-bar" style="width: 85%;" data-percentage="85"><span></span></div>
+                </div>
+                <div>
+                    <p>Java, Spring Boot</p>
+                    <div class="skills-bar" style="width: 75%;" data-percentage="75"><span></span></div>
+                </div>
+                <div>
+                    <p>Python, Django, Flask</p>
+                    <div class="skills-bar" style="width: 70%;" data-percentage="70"><span></span></div>
+                </div>
+                <div>
+                    <h3>Database Technologies</h3>
+                    <p>SQL, MySQL, PostgreSQL</p>
+                    <div class="skills-bar" style="width: 80%;" data-percentage="80"><span></span></div>
+                </div>
+                <div>
+                    <p>NoSQL, MongoDB</p>
+                    <div class="skills-bar" style="width: 75%;" data-percentage="75"><span></span></div>
+                </div>
+                <div>
+                    <h3>Version Control</h3>
+                    <p>Git, GitHub</p>
+                    <div class="skills-bar" style="width: 85%;" data-percentage="85"><span></span></div>
+                </div>
+                <div>
+                    <h3>Tools</h3>
+                    <p>VS Code, Docker, Jenkins</p>
+                    <div class="skills-bar" style="width: 85%;" data-percentage="85"><span></span></div>
+                </div>
             </div>
             <div class="section">
                 <h2>PROJECTS</h2>
