--- a/index.html
+++ b/index.html
@@ -250,26 +250,9 @@
             </div>
 
             <div class="section">
-                <h2>EDUCATION</h2>
-                <h3>Certificate in Software Development</h3>
-                <p>Moringa School, Nairobi, 2024</p>
-                <h3>High School Diploma</h3>
-                <p>Nyaikuro High School, Kisii, 2021</p>
-            </div>
-
-            <div class="section">
-                <h2>WORK EXPERIENCE</h2>
-                <h3>Front-End Developer Intern</h3>
-                <p>XYZ Tech Solutions, Nairobi, Jan 2023 - Dec 2023</p>
-                <ul>
-                    <li>Collaborated with the design team to implement responsive web interfaces.</li>
-                    <li>Assisted in the development and maintenance of the company's main website using React and CSS.</li>
-                    <li>Worked with back-end developers to integrate RESTful APIs.</li>
-                    <li>Participated in code reviews and team meetings to enhance project quality and communication.</li>
-                </ul>
-
+                <h2>WORK EXPERIENCE</h2
                 <h3>Back-End Developer Intern</h3>
-                <p>ABC Software Ltd, Nairobi, Jan 2022 - Dec 2022</p>
+                <p>ABC Software Ltd, Nairobi, April 2024 - July 2024</p>
                 <ul>
                     <li>Assisted in the development of server-side logic using Node.js and Express.js.</li>
                     <li>Worked with MongoDB to design and maintain database schemas.</li>
@@ -277,8 +260,13 @@
                     <li>Participated in the deployment and monitoring of applications on cloud platforms.</li>
                 </ul>
             </div>
-        </div>
-    </div>
+            <div class="section">
+                <h2>EDUCATION</h2>
+                <h3>Certificate in Software Development</h3>
+                <p>Moringa School, Nairobi, 2024</p>
+                <h3>High School Diploma</h3>
+                <p>Nyaikuro High School, Kisii, 2021</p>
+            </div>
 
     <footer>
         <ul class="footer-nav">
