--- a/index.html
+++ b/index.html
@@ -268,11 +268,14 @@
                 <p>Nyaikuro High School, Kisii, 2021</p>
             </div>
 
-    <footer>
-        <ul class="footer-nav">
-            <li><a href="https://github.com/hesbonangwenyi606">GitHub</a></li>
-            <li><a href="https://www.linkedin.com/in/hesbon-angwenyi-58b9412b4">LinkedIn</a></li>
-        </ul>
-    </footer>
-</body>
-</html> 
+            <footer>
+                <ul class="footer-nav">
+                    <li><a href="#">Back to top</a></li>
+                    <li><a href="mailto:hesbonmanyinsa96@gmail.com">Email</a></li>
+                    <li><a href="tel:+254743573380">contact</a></li>
+                    <li><a href="https://www.linkedin.com/in/hesbon-angwenyi-58b9412b4" target="_blank">LinkedIn</a></li>
+                    <li><a href="https://github.com/hesbonangwenyi606" target="_blank">GitHub</a></li>
+                </ul>
+            </footer>
+        </body>
+        </html>
