--- a/index.html
+++ b/index.html
@@ -95,15 +95,16 @@
             top: 50%;
             transform: translateY(-50%);
             font-size: 12px;
-            color: black; /* Set the color to black */
+            color: black; 
         }
         .footer-nav {
             list-style-type: none;
             padding: 0;
             display: flex;
-            gap: 10px;
-            justify-content: center;
+            gap: 20px;
+            justify-content: center, black;
             margin-top: 20px;
+            
         }
         .footer-nav li {
             margin-right: 40px;
@@ -271,11 +272,11 @@
 
             <footer>
                 <ul class="footer-nav">
-                    <li><a href="#">Back to top</a></li>
                     <li><a href="mailto:hesbonmanyinsa96@gmail.com">Email</a></li>
                     <li><a href="tel:+254743573380">Contact</a></li>
                     <li><a href="https://www.linkedin.com/in/hesbon-angwenyi-58b9412b4" target="_blank">LinkedIn</a></li>
                     <li><a href="https://github.com/hesbonangwenyi606" target="_blank">GitHub</a></li>
+                    <li><a href="#">Back to top</a></li>
                 </ul>
             </footer>
         </body>
