--- a/index.html
+++ b/index.html
@@ -279,33 +279,32 @@
                 <p><a href="https://github.com/irungudennisnganga/Event-Planner-App-backend.git" target="_blank">GitHub Repository back-end</a> 
                 <p><a href="https://github.com/MainaZaquir/Event-Planner.git" target="_blank">GitHub Repository</a></p>
             </div>
-
             <div class="section">
-                <h2>WORK EXPERIENCE</h2
-                <h3>Back-End Developer Intern</h3>
-                <p>ABC Software Ltd, Nairobi, April 2024 - July 2024</p>
-                <ul>
-                    <li>Assisted in the development of server-side logic using Node.js and Express.js.</li>
-                    <li>Worked with MongoDB to design and maintain database schemas.</li>
-                    <li>Implemented security and data protection measures for web applications.</li>
-                    <li>Participated in the deployment and monitoring of applications on cloud platforms.</li>
-                </ul>
-            </div>
-            <div class="section">
-                <h2>EDUCATION</h2>
-                <h3>Certificate in Software Development</h3>
-                <p>Moringa School, Nairobi, 2024</p>
-                <h3>High School Certificate</h3>
-                <p>Nyaikuro High School, Kisii, 2019</p>
-            </div>
-            <footer>
-                <ul class="footer-nav">
-                    <li><a href="mailto:hesbonmanyinsa96@gmail.com">Email</a></li>
-                    <li><a href="tel:+254743573380">Contact</a></li>
-                    <li><a href="https://www.linkedin.com/in/hesbon-angwenyi-58b9412b4" target="_blank">LinkedIn</a></li>
-                    <li><a href="https://github.com/hesbonangwenyi606" target="_blank">GitHub</a></li>
-                    <li><a href="#">Back to top</a></li>
-                </ul>
-            </footer>
-        </body>
-        </html>
+    <h2>WORK EXPERIENCE</h2>
+    <h3>Back-End Developer Intern</h3>
+    <p>ABC Software Ltd, Nairobi, April 2024 - July 2024</p>
+    <ul>
+        <li>Assisted in the development of server-side logic using Node.js and Express.js.</li>
+        <li>Worked with MongoDB to design and maintain database schemas.</li>
+        <li>Implemented security and data protection measures for web applications.</li>
+        <li>Participated in the deployment and monitoring of applications on cloud platforms.</li>
+    </ul>
+</div>
+<div class="section">
+    <h2>EDUCATION</h2>
+    <h3>Certificate in Software Development</h3>
+    <p>Moringa School, Nairobi, 2024</p>
+    <h3>High School Certificate</h3>
+    <p>Nyaikuro High School, Kisii, 2019</p>
+</div>
+<footer>
+    <ul class="footer-nav">
+        <li><a href="mailto:hesbonmanyinsa96@gmail.com">Email</a></li>
+        <li><a href="tel:+254743573380">Contact</a></li>
+        <li><a href="https://www.linkedin.com/in/hesbon-angwenyi-58b9412b4" target="_blank">LinkedIn</a></li>
+        <li><a href="https://github.com/hesbonangwenyi606" target="_blank">GitHub</a></li>
+        <li><a href="#">Back to top</a></li>
+    </ul>
+</footer>
+</body>
+</html>
